--- a/main.css
+++ b/main.css
@@ -87,7 +87,23 @@ border-radius: 4%;
   animation-duration: 4s;
   position: relative;
 }
+.interest{
+	padding: 40px;
+	font-family: Comic Sans MS,cursive;
+	font-size: x-large;
+	color:lightblue;
+	text-align: right;
+}
 
+.interest ul li{
+	clear: both;
+	list-style: none;
+	padding-bottom: 20px;
+	color: rgba(255, 238, 140,1);
+	animation-name: list;
+  animation-duration: 4s;
+  position: relative;
+}
 .space{
 	height: 30px;
 }
